--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -111,9 +111,10 @@
     <div class="login">
         <div class="login-card">
             <div style="padding: 5px 25px; align-items: center; justify-content: space-between; display: flex;">
-                <h2>Welcome Admin, {{ user.id }}</h2>
+                <h2>Welcome {{ user.name }}, {{ user.id }}</h2>
                 <div class="btn-group"  style="padding-right: 100px;">
-                    <a href="/patient/doc_reg" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Doctor</a>
+                    <a href="/hospital/new-doctor" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Doctor</a>
+                    <a href="/hospital/new-department" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Department</a>
                 </div>
             </div>
 
