--- a/templates/hospital_new_department.html
+++ b/templates/hospital_new_department.html
@@ -196,7 +196,6 @@
         </div>
         
         <div class="btn-group">
-            <a href="/patient/dashboard" class="btn btn-all">Dashboard</a>
             <a href="#end-content" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
@@ -204,39 +203,13 @@
 
     <div class="login">
         <div class="login-card">
-            <h2>New Appointment</h2>
-            <p>We assure to take you to the best Doctor</p>
+            <h2>Add New Department</h2>
+            <p>We appreciate your contribution to the betterment of this society.</p>
 
-            <form method="POST" action="/patient/confirm-appointment">
-                <label>First name</label>
-                <input type="text" name="fname" required>
-                
-                <label>Last name</label>
-                <input type="text" name="lname" required>
-
-                <label>Date</label>
-                <input type="date" name="date" required>
-
-                <label>Department</label>
-                <select name="department" id="department" onchange="loadDoctors()" required>
-                    <option value="">-- Select Department --</option>
-                    {% for dept in depts %}
-                    <option value="{{ dept.id }}">{{ dept.name }}</option>
-                    {% endfor %}
-                </select>
-
-                <label>Doctor</label>
-                <select name="doct_id" id="doctor" onchange="loadSlots()" required>
-                    <option value="">-- Select Doctor --</option>
-                </select>
-
-                <label>Select Slot</label>
-                <select name="slot" id="slot" required>
-                    <option value="">-- Select Slot --</option>
-                </select>
-
-
-                <button type="submit" class="login-btn">Book Appointment</button>
+            <form method="POST">
+                <label>Department name</label>
+                <input type="text" name="name" required>
+                <button type="submit" class="login-btn">Add New Department</button>
             </form>
 
         </div>
@@ -248,54 +221,6 @@
         <h2>About Us</h2>
         <p>Welcome to Hospitalizee, the ultimate solution to hospital management. We are dedicated to providing top-notch services to ensure efficient and effective healthcare management.</p>
     </div>
-
-    <script>
-        function loadDoctors() {
-            const deptId = document.getElementById("department").value;
-            const doctorSelect = document.getElementById("doctor");
-            const slotSelect = document.getElementById("slot");
-
-            doctorSelect.innerHTML = '<option value="">Loading...</option>';
-            slotSelect.innerHTML = '<option value="">-- Select Slot --</option>';
-
-            if (!deptId) {
-                doctorSelect.innerHTML = '<option value="">-- Select Doctor --</option>';
-                return;
-            }
-
-            fetch(`/get-doctors/${deptId}`)
-                .then(res => res.json())
-                .then(data => {
-                    doctorSelect.innerHTML = '<option value="">-- Select Doctor --</option>';
-                    data.forEach(d => {
-                        doctorSelect.innerHTML +=
-                            `<option value="${d.id}">${d.name}, ${d.hname}</option>`;
-                    });
-                });
-        }
-
-        function loadSlots() {
-            const doctorId = document.getElementById("doctor").value;
-            const slotSelect = document.getElementById("slot");
-
-            slotSelect.innerHTML = '<option value="">Loading...</option>';
-
-            if (!doctorId) {
-                slotSelect.innerHTML = '<option value="">-- Select Slot --</option>';
-                return;
-            }
-
-            fetch(`/get-slots/${doctorId}`)
-                .then(res => res.json())
-                .then(data => {
-                    slotSelect.innerHTML = '<option value="">-- Select Slot --</option>';
-                    data.forEach(slot => {
-                        slotSelect.innerHTML +=
-                            `<option value="${slot}">${slot}</option>`;
-                    });
-                });
-        }
-    </script>
 
 
 </body>
