--- a/templates/patient_registration.html
+++ b/templates/patient_registration.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Patient</title>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
         body {
             margin: 0;
@@ -219,7 +218,11 @@
                 </div>
                 
                 <label>Email</label>
-                <input type="email" name="email" placeholder="example@mail.com" required>
+                {% if email %}
+                    <input type="email" name="email" value="{{ email }}" readonly>
+                {% else %}
+                    <input type="email" name="email" placeholder="example@mail.com" required>
+                {% endif %}
 
                 <div class="row">
                     <div class="field">
