--- a/templates/hospital_new_doctor.html
+++ b/templates/hospital_new_doctor.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 90vh;
+            height: auto
             background-color: #f0f2f5;
         }
 
@@ -23,6 +23,8 @@
             padding: 36px 36px;
             border-radius: 10px;
             box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
 
         .login-card h2 {
