--- a/templates/home.html
+++ b/templates/home.html
@@ -359,8 +359,8 @@
                 Hospitalizee is a cloud-based healthcare management system designed
                 for hospitals, clinics, laboratories, and patients for anywhere and anytime emergency access.
             </p>
-            <a href="#" class="btn btn-primary">Add your Hospital</a>
-            <a href="#" class="btn btn-secondary">Book an Appointment</a>
+            <a href="/hospital/register" class="btn btn-primary">Add your Hospital</a>
+            <a href="/patient/login" class="btn btn-secondary">Book an Appointment</a>
         </div>
     </header>
 
@@ -461,7 +461,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2026 Hospitalizee. All Rights Reserved.</p>
-            <p>Email: support@hospitalizee.com | Phone: +91-XXXXXXXXXX</p>
+            <p>Email: support@hospitalizee.com | Phone: +91-8158867780</p>
         </div>
     </footer>
 
