--- a/templates/emergency_rec.html
+++ b/templates/emergency_rec.html
@@ -224,7 +224,7 @@
                 <b>Address:</b> {{ address }}<br>
                 <b>Pincode:</b> {{ pincode }}<br>
                 <b>Reason for visit:</b> {{ reason }}<br>
-                <button type="button" class="btn-btn-primary" style="margin-top:10px;">Edit Patient</button>
+                <a href="/emergency?fname={{ fname }}&lname={{ lname }}&dob={{ dob }}&phone={{ phone }}&email={{ email }}&address={{ address }}&pincode={{ pincode }}&reason={{ reason }}" class="btn-group" style="margin-top:20px;">Edit Patient</a>
                 
             <div id="content">
                 <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" > Nearest available hospitals</h3>
