--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -181,7 +181,7 @@
                     </tr>
                     {% for dept in depts %}
                     <tr>
-                        <td>{{ dept.name }}</td>
+                        <td>{{ dept }}</td>
                         <td style="text-align: right;">
                             <a href="#"
                             class="btn btn-all" style=" padding-top: 2px; background-color: rgba(17, 145, 191, 1);">
