--- a/templates/emergency_doctors.html
+++ b/templates/emergency_doctors.html
@@ -121,10 +121,10 @@
             <div id="table" style="display:flex; justify-content:center;">
                 <table class="table" style="width: 40%;">
                     <tr style="font-family: system-ui;">
-                        <th scope="col">ID</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Department</th>
-                        <th scope="col">Edit</th>
+                        <th scope="col" style="width:15%;">ID</th>
+                        <th scope="col" style="width:35%;">Name</th>
+                        <th scope="col" style="width:35%;">Department</th>
+                        <th scope="col" style="width:15%;">Edit</th>
                     </tr>
                     <tr>
                         <td>1</td>
@@ -132,7 +132,7 @@
                         <td>1</td>
                         <td style="text-align: center;">
                             <a href="#"
-                            class="btn btn-all" style=" padding: 2px; background-color: rgba(29, 184, 12, 1);">
+                            class="btn btn-all" style=" padding: 2px; background-color: rgba(184, 12, 12, 1);">
                                 Remove
                             </a>
                         </td>
@@ -145,10 +145,10 @@
             <div id="table" style="display:flex; justify-content:center;">
                 <table class="table" style="width: 40%;">
                     <tr style="font-family: system-ui;">
-                        <th scope="col">ID</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Department</th>
-                        <th scope="col">Edit</th>
+                        <th scope="col" style="width:15%;">ID</th>
+                        <th scope="col" style="width:35%;">Name</th>
+                        <th scope="col" style="width:35%;">Department</th>
+                        <th scope="col" style="width:15%;">Edit</th>
                     </tr>
                     <tr>
                         <td></td>
@@ -156,7 +156,7 @@
                         <td></td>
                         <td style="text-align: center;">
                             <a href="#"
-                            class="btn btn-all" style=" padding: 2px; background-color: rgba(184, 23, 12, 1);">
+                            class="btn btn-all" style=" padding: 2px; background-color: rgba(58, 190, 9, 1);">
                                 Add
                             </a>
                         </td>
