--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -115,8 +115,8 @@
             </div>
             <div style="padding: 5px 25px; align-items: center; justify-content: space-between; display: flex;">
                 <div class="btn-group">
-                    <a href="/hospital/new-doctor" class="btn btn-link" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Doctor</a>
-                    <a href="/hospital/new-department" class="btn btn-link" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Department</a>
+                    <a href="/hospital/new-doctor" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Doctor</a>
+                    <a href="/hospital/new-department" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Department</a>
                 </div>
             </div>
 
