--- a/templates/emergency.html
+++ b/templates/emergency.html
@@ -199,7 +199,7 @@
             <h1 style="color: red; text-align: center;">EMERGENCY</h1>
             <p>We Are Ready to Help</p>
 
-            <form method="POST" action="/emergency_hosp">
+            <form method="POST" action="/emergency_hosp?">
                 <label>First name</label>
                 <input type="text" name="fname" value="{{ fname if fname else '' }}" required>
                 
