--- a/templates/emergency_rec.html
+++ b/templates/emergency_rec.html
@@ -227,6 +227,7 @@
                 <a href="/emergency?fname={{ fname }}&lname={{ lname }}&dob={{ dob }}&phone={{ phone }}&email={{ email }}&address={{ address }}&pincode={{ pincode }}&reason={{ reason }}" class="btn-group" style="margin-top:20px;">Edit Patient</a>
                 
             <div id="content">
+                <h3 class="headings" style="margin-bottom: 10px; color:#00080a; font-family: system-ui;" > Recommended Department: {{ dept }}</h3>
                 <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" > Nearest available hospitals</h3>
             </div>
             <form method="POST" action="/emergency/book-emergency?fname={{ fname }}&lname={{ lname }}&dob={{ dob }}&phone={{ phone }}&email={{ email }}&address={{ address }}&pincode={{ pincode }}&reason={{ reason }}">
