--- a/templates/hospital_registration.html
+++ b/templates/hospital_registration.html
@@ -210,7 +210,7 @@
                     <div class="field">
                         <label>Email</label>
                         {% if email %}
-                            <input type="email" name="email" value="{{ email }}" readonly>
+                            <input type="email" name="email" value="{{ email }}">
                         {% else %}
                             <input type="email" name="email" placeholder="example@mail.com" required>
                         {% endif %}
