--- a/templates/emergency_occupied_beds.html
+++ b/templates/emergency_occupied_beds.html
@@ -208,7 +208,7 @@
 
             <form method="POST">
                 <label>Update total occupied beds</label>
-                <input type="number" name="o_beds" required>
+                <input type="number" name="occupied" required>
                 <button type="submit" class="login-btn">Update</button>
             </form>
 
