--- a/templates/emergency_total_beds.html
+++ b/templates/emergency_total_beds.html
@@ -203,12 +203,12 @@
 
     <div class="login">
         <div class="login-card">
-            <h2>Add New Department</h2>
+            <h2>Emergency Availability</h2>
             <p>We appreciate your contribution to the betterment of this society.</p>
 
             <form method="POST">
-                <label>Emergency Availability</label>
-                <input type="number" name="t_beds" required>
+                <label>Update total available beds</label>
+                <input type="number" name="total" required>
                 <button type="submit" class="login-btn">Update</button>
             </form>
 
