--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -136,7 +136,7 @@
                         <td>
                             <div style="display: flex; justify-content: space-between; align-items: center;">
                                 <span>{{ occupied_beds }}</span>
-                                <a href="#" class="btn btn-all"
+                                <a href="/hospital/update-beds/occupied" class="btn btn-all"
                                 style="background-color: rgba(17, 145, 191, 1);">
                                     Update
                                 </a>
@@ -146,7 +146,7 @@
                         <td>
                             <div style="display: flex; justify-content: space-between; align-items: center;">
                                 <span>{{ total_beds }}</span>
-                                <a href="#" class="btn btn-all"
+                                <a href='/hospital/update-beds/total' class="btn btn-all"
                                 style="background-color: rgba(17, 145, 191, 1);">
                                     Update
                                 </a>
