--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -190,7 +190,7 @@
                     <tr style="line-height: 2;">
                         <td>{{ dept }}</td>
                         <td style="text-align: right;">
-                            <a href="#"
+                            <a href="/hospital/view-department?h_id={{ user.id }}&dept={{ dept }}"
                             class="btn btn-all" style=" padding:8px; background-color: rgba(17, 145, 191, 1);">
                                 View
                             </a>
