--- a/templates/hospital_dashboard_view_departments.html
+++ b/templates/hospital_dashboard_view_departments.html
@@ -105,7 +105,7 @@
         
         <div class="btn-group">
             <a href="/hospital/dashboard?user_id={{ hospital.id }}" class="btn btn-all">Dashboard</a>
-            <a href="#end-content" class="btn btn-all">About Us</a>
+            <a href="/about" class="btn btn-all">About Us</a>
         </div>
     </div>
     <div class="login">
