--- a/templates/hospital_registration.html
+++ b/templates/hospital_registration.html
@@ -189,7 +189,7 @@
         
         <div class="btn-group">
             <a href="/" class="btn btn-all">Home</a>
-            <a href="#end-content" class="btn btn-all">About Us</a>
+            <a href="/about" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
     </div>
