--- a/templates/emergency_doctors.html
+++ b/templates/emergency_doctors.html
@@ -104,7 +104,7 @@
         
         <div class="btn-group">
             <a href="/hospital/" class="btn btn-all">Dashboard</a>
-            <a href="#end-content" class="btn btn-all">About Us</a>
+            <a href="/about" class="btn btn-all">About Us</a>
         </div>
     </div>
     <div class="login">
