--- a/templates/emergency_occupied_beds.html
+++ b/templates/emergency_occupied_beds.html
@@ -196,7 +196,7 @@
         </div>
         
         <div class="btn-group">
-            <a href="#end-content" class="btn btn-all">About Us</a>
+            <a href="/about" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
     </div>
