--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -104,7 +104,7 @@
         
         <div class="btn-group">
             <a href="/hospital/logout" class="btn btn-all">Logout</a>
-            <a href="#end-content" class="btn btn-all">About Us</a>
+            <a href="/about" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
     </div>
