--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -100,7 +100,7 @@
         
         <div class="btn-group">
             <a href="/patient/logout" class="btn btn-all">Logout</a>
-            <a href="#end-content" class="btn btn-all">About Us</a>
+            <a href="/about" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
     </div>
