--- a/templates/patient_new_appointment.html
+++ b/templates/patient_new_appointment.html
@@ -197,7 +197,7 @@
         
         <div class="btn-group">
             <a href="/patient/dashboard" class="btn btn-all">Dashboard</a>
-            <a href="#end-content" class="btn btn-all">About Us</a>
+            <a href="/about" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
     </div>
